--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN=''
+CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
 
 ###> symfony/mailer ###
