--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -17,7 +17,7 @@ nelmio_cors:
                 max_age: 3600
             '^/':
                 origin_regex: true
-                allow_origin: [^https?://.*?$]
+                allow_origin: ['*']
                 allow_headers: ['X-Custom-Auth']
                 allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
                 max_age: 3600
