--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "env": {
       "APP_ENV": "prod",
       "APP_SECRET": {"generator": "secret"},
-      "CORS_ALLOW_ORIGIN": "https://reportclients.herokuapp.com"
+      "CORS_ALLOW_ORIGIN": "*"
     },
     "addons": [
       "heroku-postgresql"
